--- a/w271_Lab1_Jeff.Rmd
+++ b/w271_Lab1_Jeff.Rmd
@@ -50,9 +50,52 @@ geometry: margin=1in
 
 Carefully read the Dalal et al (1989) paper (Skip Section 5).
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+
+#Import libraries
+library(car)
+library(dplyr)
+library(Hmisc)
+library(stargazer)
+library(ggfortify)
+library(corrplot)
+library(corrgram)
+library(ggplot2)
+library(tidyr)
+library(lmtest)
+library(sandwich)
+library(gridExtra)
+library(nnet)
+library(mcprofile)
+
+```
+
+
 **Part 1 (25 points)**
 
 Conduct a thorough EDA of the data set. This should include both graphical and tabular analysis as taught in this course. Output-dump (that is, graphs and tables that don't come with explanations) will result in a very low, if not zero, score. Since the report has a page-limit, you will have to be selective when choosing visuals to illustrate your key points, associated with a concise explanation of the visuals. This EDA should begin with an inspection of the given dataset; examination of anomalies, missing values, potential of top and/or bottom code etc.   
+
+```{r Part 1 - EDA, results='asis'}
+challenger<-read.table(file = "/Users/jeff/Documents/MIDS/W271/w271_lab1/challenger.csv", header = TRUE, sep = ",") #Import table
+summary(challenger)
+challenger
+#stargazer(challenger, header= F, title = "Summary Table of Challenger Data", type='latex')
+stargazer(challenger, header= F, title = "Summary Table of Challenger Data", type='text')
+
+knitr::kable(
+  challenger[1:6,1:5 ], caption = 'Top 6 Rows of Challenger Dataset')
+
+
+# Distribution of log(wage)
+ggplot(challenger, aes(x = lwg)) +
+  geom_histogram(aes(y = ..density..), binwidth = 0.2, fill="#0072B2", colour="black") +
+  ggtitle("Log Wages") + 
+  theme(plot.title = element_text(lineheight=1, face="bold"))
+
+```
+
+
 
 **Part 2 (20 points)** 
 
@@ -91,3 +134,4 @@ With the same set of explanatory variables in your final model, estimate a linea
 **Part 5 (10 points)**
 
 Interpret the main result of your final model in terms of both odds and probability of failure. Summarize the final result with respect to the question(s) being asked and key takeaways from the analysis.
+
