--- a/w271_Lab1_main.Rmd
+++ b/w271_Lab1_main.Rmd
@@ -7,6 +7,8 @@ output:
   number_sections: true
 fontsize: 11pt
 geometry: margin=1in
+fig_width: 6 
+fig_height: 4
 ---
 
 ## Instructions (Please Read Carefully):
@@ -55,7 +57,7 @@ Carefully read the Dalal et al (1989) paper (Skip Section 5).
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-
+# Potentially delete libraries...(Jeff)
 #Import libraries
 library(car)
 library(dplyr)
@@ -79,7 +81,7 @@ library(dplyr)
 Conduct a thorough EDA of the data set. This should include both graphical and tabular analysis as taught in this course. Output-dump (that is, graphs and tables that don't come with explanations) will result in a very low, if not zero, score. Since the report has a page-limit, you will have to be selective when choosing visuals to illustrate your key points, associated with a concise explanation of the visuals. This EDA should begin with an inspection of the given dataset; examination of anomalies, missing values, potential of top and/or bottom code etc.
 
 ```{r}
-path = "/Users/jeff/Documents/MIDS/W271/w271_lab1/challenger.csv"
+path = "/Users/jamesdarmody/Documents/Lab1w271/w271_lab1/challenger.csv"
 
 challenger<-read.table(file =  path, header = TRUE, sep = ",") #Import table
 
@@ -98,10 +100,10 @@ First, we read in the data set to an object called 'challenger'.  From here, we 
 ```{r}
 
 #output in text format for view in latex
-#stargazer(challenger, header= F, title = "Summary Table of Wheat Data")
+stargazer(challenger, header= F, title = "Summary Table of O.Ring Failure")
 
 #output in text format for view in R
-stargazer(challenger, header= F, title = "Summary Table of Wheat Data", type='text')
+#stargazer(challenger, header= F, title = "Summary Table of O.Ring Failure", type='text')
 
 ```
 
@@ -130,7 +132,7 @@ ggplot(challenger, aes(x = Pressure)) +
 
 ```
 
-The histogram above confirms our notion that PSI measurements in the dataset occur in regular increments, with most measurements taking place at 200psi, but other measurements also taking place at 50 and 100 psi as well.  This is a discrete integer variable.
+The histogram above confirms our notion that PSI measurements in the dataset occur in regular increments, with most measurements taking place at 200psi, but other measurements also taking place at 50 and 100 psi as well.  You could potentially treat this as either an ordinal variable or a discrete integer variable.  We choose to leave as a discrete integer variable.
 
 ```{r}
 # Distribution of Temp
@@ -155,15 +157,17 @@ Taking into consideration the two explanatory variables that matter for our anal
 From this chart, we can draw several conclusions.  First, most O-ring failures seem to occur at higher pressures.  Second, most O-ring failures seem to occur at lower temperatures, with the only datapoint having two failures occuring at the lowest recorded temperatures.  
 
 ```{r}
-ggplot(challenger, aes(factor(O.ring), Temp)) +  
+chart.a <- ggplot(challenger, aes(factor(O.ring), Temp)) +  
   geom_boxplot(aes(fill = factor(O.ring))) + 
   ggtitle("Temperature by O.ring Failure") + 
   theme(plot.title = element_text(lineheight=1, face="bold"))
 
-ggplot(challenger, aes(factor(O.ring), Pressure)) +  
+chart.b <- ggplot(challenger, aes(factor(O.ring), Pressure)) +  
   geom_boxplot(aes(fill = factor(O.ring))) + 
   ggtitle("Pressure by O.ring Failure") + 
   theme(plot.title = element_text(lineheight=1, face="bold"))
+
+# cast side-by-side
 ```
 
 The two boxplots we examine here further illustrate the distribution of our two key explanatory variables, but using color to bring out O.ring failure.  The first boxplot serves to reaffirm our first hypothesis that O.ring failures tend to occur at lower temperatures, while the second boxplot indicates that apart from one outlier at 50psi, O.ring failures all occur at 200psi (higher pressure).  Thus, without having constructed any formal models or analytics, an initial view of the data may seem to indicate that lower temperatures and higher pressures lead to O.ring failure.
@@ -186,7 +190,7 @@ summary(O.ring_binomial)
 
 A key feature of the binomial distribution is that each trial has to be independent. This may be problematic in trying to model out the likelihood of O.ring failure when using the first model. As noted in the paper (p. 947), the failure of the secondary O-ring may be conditional on the performance of the primary O-ring. 
 
-The second model for occurence of O-ring incidents, creates a binary response variable for where there is 1 if there is an incident in the flight and 0 otherwise. In this scenario, there is some "information loss" associated with reducing our dependent variable to a binary response, but we do not make the assumption that the independence of each joint is required.
+The second model for occurence of O-ring incidents, creates a binary response variable for where there is 1 if there is an incident in the flight and 0 otherwise. In this scenario, there is some "information loss" associated with reducing our dependent variable to a binary response, but we do not make the assumption that the independence of each joint is required. We agree with the paper's initial authors that a binary response variable is the optimal means of modeling because while there may be information loss, it does not make unrealistic assumptions on which the analysis will rest.
 
 
 (b) Estimate the logistic regression model using the explanatory variables in a linear form.
@@ -195,16 +199,19 @@ The second model for occurence of O-ring incidents, creates a binary response va
 challenger2 <- read.table(path, header=TRUE, sep=",")
 challenger2$O.ring = ifelse(challenger2$O.ring > 0, 1, 0)
 
-O.ring <- glm(formula=O.ring ~ Temp, family=binomial(link="logit"), data=challenger2)
-summary(O.ring)
+O.ring <- glm(formula=O.ring ~ Temp + Pressure, family=binomial(link="logit"), data=challenger2)
+#summary(O.ring)
+stargazer(O.ring, header = F, type = 'latex', omit.table.layout= 'n',
+          title='Regression Results for Model 1')
 
 ```
 
 
 (c) Perform LRTs to judge the importance of the explanatory variables in the model.
 
-```{r}
-Anova(O.ring)
+```{r, results=‘asis’, message = F, warning = F}
+stargazer(Anova(O.ring), header = F, type = 'latex', omit.table.layout= 'n',
+          title='Regression Results for Model 1')
 ```
 
 
@@ -222,7 +229,8 @@ Continuing Exercise 4, consider the simplified model $logit(\pi) = \beta_0 +  \b
 
 ```{r}
 O.ring.temp <- glm(formula= O.ring ~ Temp, family=binomial(link=logit), data=challenger2)
-summary(O.ring.temp)
+stargazer(O.ring.temp, header = F, type = 'latex', omit.table.layout= 'n',
+          title='Regression Results for Model 2')
 ```
 
 
@@ -254,7 +262,7 @@ w_n$combine <- w$O.ring / n$O.ring
 #w_n
 
 p = ggplot() +
-  #geom_point(data = w.n, aes(x = Temperature, y = w$O.ring / n$O.ring), size=1) +
+  geom_point(data = w_n, aes(x = Temperature, y = w$O.ring / n$O.ring), size=1) +
   geom_line(data = df3b, aes(x = temp, y = pi), size=1) +
   xlab('Temp') +
   ylab('Probability') +
@@ -441,7 +449,9 @@ hist(O.ring.linear$residuals, breaks = 50)
 Interpret the main result of your final model in terms of both odds and probability of failure. Summarize the final result with respect to the question(s) being asked and key takeaways from the analysis.
 
 ```{r}
-O.ring.linear <- lm(formula = O.ring ~ Temp + Pressure, data=challenger2)
-summary(O.ring.linear)
+O.ring.final <- glm(formula = O.ring ~ Temp, family=binomial(link="logit"), data=challenger2)
+summary(O.ring.final)
 ```
 
+## Ahana take because of stargazer
+Don't need interaction
