--- a/JamesDarmody_JeffLi_AhanaNamburi_Lab1_Final.Rmd
+++ b/JamesDarmody_JeffLi_AhanaNamburi_Lab1_Final.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "W271 Group Lab 1"
-fig_width: 5
+fig_width: 4
 fontsize: 11pt
 output:
   pdf_document: null
@@ -31,11 +31,10 @@ library(mcprofile)
 library(gridExtra)
 ```
 
-
 Conduct a thorough EDA of the data set. This should include both graphical and tabular analysis as taught in this course. Output-dump (that is, graphs and tables that don't come with explanations) will result in a very low, if not zero, score. Since the report has a page-limit, you will have to be selective when choosing visuals to illustrate your key points, associated with a concise explanation of the visuals. This EDA should begin with an inspection of the given dataset; examination of anomalies, missing values, potential of top and/or bottom code etc.
 
 ```{r}
-path = "/Users/Ahana/Desktop/w271_lab1/challenger.csv"
+path = "/Users/jeff/Documents/MIDS/W271/w271_lab1/challenger.csv"
 
 challenger<-read.table(file =  path, header = TRUE, sep = ",") #Import table
 
@@ -96,11 +95,9 @@ grid.arrange(hist.pressure, hist.temp, ncol=2)
 
 ```
 
-- Pressure
-The histogram above confirms our notion that PSI measurements in the dataset occur in regular increments, with most measurements taking place at 200psi, but other measurements also taking place at 50 and 100 psi as well. We had considered converting Pressure to a categorical variable, since there are only 3 distinct values for Pressure (50, 100, 200) in the given dataset. However, we were also concerned that in converting Pressure to categorical, we would be losing some of the scaling factor of Pressure, thereby losing some of the predictive power for the variable. We choose to leave as a discrete integer variable.
+- Pressure: The histogram above confirms our notion that PSI measurements in the dataset occur in regular increments, with most measurements taking place at 200psi, but other measurements also taking place at 50 and 100 psi as well. We had considered converting Pressure to a categorical variable, since there are only 3 distinct values for Pressure (50, 100, 200) in the given dataset. However, we were also concerned that in converting Pressure to categorical, we would be losing some of the scaling factor of Pressure, thereby losing some of the predictive power for the variable. We choose to leave as a discrete integer variable.
 
-- Temperature
-We extend our histogram analysis further, this time examining temperature.  The distribution has two major peaks, right around upper 60s, and mid 70s, with only a few observations warmer or cooler than those areas.  This is a continuous variable.
+- Temperature: We extend our histogram analysis further, this time examining temperature.  The distribution has two major peaks, right around upper 60s, and mid 70s, with only a few observations warmer or cooler than those areas.  This is a continuous variable.
 
 ```{r}
 ggplot(challenger, aes(x=Pressure, y=Temp, color=O.ring)) + geom_point() + 
@@ -145,7 +142,8 @@ We can replicate the first model of the paper using the following R code (see be
 ```{r, results='asis', message = F, warning = F}
 challenger_binomial <- read.table(path, header=TRUE, sep=",")
 O.ring_binomial <- glm(formula=cbind(O.ring,6-O.ring) ~ 
-                         Temp + Pressure, family=binomial(link="logit"), data=challenger_binomial)
+                      Temp + Pressure, family=binomial(link="logit"),
+                       data=challenger_binomial)
 
 #summary(O.ring_binomial)
 stargazer(O.ring_binomial, header=F, title = "Regression Output for Binomial Model")
@@ -382,7 +380,7 @@ Because our dataset is so small here (n=23), a relatively small number of the bo
 
 (f) Determine if a quadratic term is needed in the model for the temperature.
 
-```{r, results='asis', message = F, warning = F}
+```{r}
 O.ring.quadratic <- glm(formula=O.ring ~ Temp + Pressure + I(Temp^2), family=binomial(link="logit"), data=challenger2)
 O.ring.quadratic.temp <- glm(formula=O.ring ~ Temp + I(Temp^2), family=binomial(link="logit"), data=challenger2)
 
@@ -440,15 +438,16 @@ Interpret the main result of your final model in terms of both odds and probabil
 
 ```{r, results='asis', message = F, warning = F}
 O.ring.final <- glm(formula = O.ring ~ Temp, family=binomial(link="logit"), data=challenger2)
-#summary(O.ring.final)
 
 stargazer(O.ring.final, header=F, title = "Final Model Output")
-
-anova(O.ring.final)
 
 #Odds Ratios
 c=-1
 exp(c*O.ring.final$coefficients[2])
+```
+
+```{r}
+anova(O.ring.final)
 ```
 
 We have chosen our Final model to be the **Logistic Regression Model with only Temperature as the indicator variable**. Our dataset has a binary response variable, which is 1 if there is a failure and 0 if there is none. 
@@ -461,6 +460,6 @@ $$
 
 - **Confidence Intervals** : We also believe that a smaller dataset has led to larger/wider confidence intervals at lower temperatures versus higher temperatures. We are constrained by the the nature of the data as there are very limited space shuttle launches. 
 
-- **Odds Ratios** : Based on the above, we observe that the odds of success (Failure of O-Ring) change by 1.261 for every degree change in temperature. Lower Temperatures increase the probability of failure of O-Ring. We also observe this in graph generated in part 3b, where the probability of failure consistently drops with an increase in temperature. Given our lowest observed temperature is 53 degrees in the dataset, we observe that probability of failure is 1 at 31 degrees which is also the temperature at which Challenger was launched. 
+- **Odds Ratios** : Based on the above, we observe that the odds of success (Failure of O-Ring) change by 1.261 times over for every degree change in temperature. Lower Temperatures increase the probability of failure of O-Ring. We also observe this in graph generated in part 3b, where the probability of failure consistently drops with an increase in temperature. Given our lowest observed temperature is 53 degrees in the dataset, we observe that probability of O-ring failure is .9996 at 31 degrees which is also the temperature at which Challenger was launched. Based on this data, we would not recommend that Challenger be launched when the temperature was 31 degrees.
 
 
